--- a/index.html
+++ b/index.html
@@ -55,8 +55,94 @@
 <br>
 <li> <a href="https://www.youtube.com/watch?v=uFaPfxCPPvo&t=0s">Eve </li> </a>
 <br>
+<hr>
+<hr>
+
+</body>
+</html>
 
 
+  <H1>MY PRACTICE</H1>
+<h1>QUESTION 1</h1>
 
 
+<ul>
+  <li>Nepal</li>
+	<ul style="list-style-type:circle;">
+  		<li>Zones</li>
+			<ul style="list-style-type:square;">
+  				<li>Mechi</li>
+  				<li>Mahakali</hi>
+  				<li>Narayani</li>
+			</ul>
+    		<li>District</li>
+			<ul style="list-style-type:square;">
+    				<li>Karthmandu</li>
+    				<li>Gorkha</li>
+    				<li>Baglung</li>
+    				<li>Butwal</li>
+			</ul>
+ 		
+    		<li>City</li>
+			<ul style="list-style-type:square;">
+    				<li>Pokhara</li>
+    				<li>Patan</li>
+    				<li> Bhaktapur</li>
+			</ul>
+	</ul>
+    <li>India</li>
+		<ul style="list-style-type:circle;">
+    				<li>New Delhi</li>
+   				 <li> Bangalore</li>
+</ul>
+</ul>
+
+<h2>QUESTION 2</h2>
+<ul style="list-style-type:circle;">
+   	<li>FOHSS</li>
+		<ul style="list-style-type:disc;">
+			<li>BCA</li>
+				<ol>
+					<li>IOT</li>
+				</ol>
+		</ul>
+   	<li>FOM</li>
+				<ol>
+					<li>BIM</li>
+					<li>IOT</li>
+				</ol>
+</ul>
+
+
+<h2>QUESTION 3</h2>
+
+<table style="width:100%;border:2px solid red;">
+<tr >
+    	<th>SN</th>
+    	<th>NAME</th>
+   	 <th>PHONE</th>
+</tr>
+<tr>
+        <TD>1</TD>
+	<TD>SITA</TD>
+	<TD>1234</TD>
+</TR>
+
+<TR>
+	<TD>2</TD>
+	<TD>HARI</TD>
+	<TD>3456</TD>
+</TR>
+
+<TR>
+	<TD>3</TD>
+	<TD>GITA</TD>
+	<TD>5678</TD>
+</TR>
+
+</body>
+</html>
+
+	
+  
 
