--- a/index.html
+++ b/index.html
@@ -139,7 +139,69 @@
 	<TD>GITA</TD>
 	<TD>5678</TD>
 </TR>
+<p>6th may</p>
+    <h1>QUESTION 1</h1>
+    <table border="1" style="border-collapse: collapse;">
+        <!--boarder collapse merges the table -->
 
+        <tr style="background-color:powderblue;" </tr>
+            <th> Person</th>
+            <th>Age</th>
+        </tr>
+        <tr>
+            <td style="background-color:yellow;">KP OLI</td>
+            <td>70</td>
+        </tr>
+        <tr>
+            <td style="background-color: yellow;"> Rajesh Hamal</td>
+            <td style="color:red;">58</td>
+
+        </tr>
+        <tr>
+            <td style="background-color: yellow;"> Mr.Beast</td>
+            <td>37</td>
+        </tr>
+        <tr>
+            <td style="background-color: yellow;">Paras Khadka</td>
+            <td> 35</td>
+        </tr>
+    </table>
+</body>
+
+<body>
+    <h1>QUESTION 2</h1>
+    <table border="1" style="border-collapse: collapse;">
+        <tr>
+            <th  style="background-color:red;">HTML</th>
+            <th style="background-color:rgb(38, 0, 255);">CSS</th>
+            <th style="background-color: green;">JS</th>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>Hyper Text Markup Language</li>
+                    <li>Structure of website</li>
+                </ul>
+            </td>
+                <td>
+                    <ul>
+                        <li>Cascading Style Sheet</li>
+                        <li>design of website</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Java Script</li>
+                        <li> makes it interactive</li>
+                    </ul>
+                </td>
+                <tr>
+                <td> <img src="html.jpg"alt="html" height="140" width="150">
+      
+                </td>
+
+        </tr>
+        
 </body>
 </html>
 
