--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <head>
 <title> My Portfolio </title>
 </head>
+<style>
+div {
+  width: 300px;
+  margin: auto;
+  background-color: #FFF4A3;
+}
+</style>
 <body style="text-align:center;background-color:MintCream;">
 
 <h1 style=" background-color:AliceBlue;"> Greetings!<h1>
@@ -15,11 +22,14 @@
 
 <h2> <span style="background-color:white;color:red;">About Me </span> </h2>
 
+
+<div>
 <p>Hey There! I'm Prastha Khadgi, a 15-year-old student with an unquenchable
 thirst for adventure and knowledge.<br> Whether it's exploring new places
 or diving into fresh learning experiences, I'm always up for the <br>challenge.
 Join me on my journey of discovery as I embrace every opportunity 
 to grow and explore the world around me. </p>
+</div>
 
 <hr>
 
@@ -28,20 +38,24 @@ to grow and explore the world around me. </p>
 
 
 
-
+<div style="background-color:#FFC0C7;">
 <p> Nayabazar, Kathmandu </p>
+</div>
 <hr>
 
 
 <h3> <span style="background-color:white;color:red;"> Email </span> </h3>
-
+<div style="background-color:#D9EEE1;">
 <a href=mailto:"prastha.a5576@gmail.com">Click Here</a>
+</div>
 <hr>
 
 <h3> <span style="background-color:white;color:red;"> Fav Movie </span> </h3>
 
 
 <ul>
+
+
 	<img src="https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_.jpg"
 	alt="Interstellar" width="150" height="200">
 	<li>Interstellar</li>
@@ -101,6 +115,4 @@ alt="'NYC" width="200" height="200">
 </body>
 </html>
 
-
-</body>
 
